@@ -3,5 +3,12 @@ test_issue_1063 = executable('issue-1063',
   dependencies: freetype_dep,
 )
 
-test('issue-1063', test_issue_1063, suite: 'regression')
+test_env = ['FREETYPE_TESTS_DATA_DIR='
+            + join_paths(meson.current_source_dir(), 'data')]
 
+test('issue-1063',
+  test_issue_1063,
+  env: test_env,
+  suite: 'regression')
+
+# EOF
